# voxel-rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  render.ppm
apps/: bake_views.cpp  make_orbit_cameras.cpp  reconstruct.cpp  render.cpp  synth_dataset.cpp
docs/: PERFORMANCE.md
include/voxr/: camera.hpp  image.hpp  math.hpp  reconstruct_cpu.hpp  reconstruct_cuda.hpp  render_cpu.hpp  render_cuda.hpp  scene.hpp  voxel_grid.hpp
scripts/: photos_to_voxels.sh
src/: camera.cpp  cuda_common.cuh  image.cpp  reconstruct_cpu.cpp  reconstruct_cuda.cu  render_cpu.cpp  render_cuda.cu  scene.cpp  voxel_grid.cpp
tests/: bench_common.hpp  test_bench_pipeline.cpp  test_bench_reconstruct.cpp  test_bench_render.cpp  test_camera.cpp  test_cuda_parity.cpp  test_harness.hpp  test_pipeline.cpp  test_voxel_grid.cpp
